atualizar figurinhas para mais, para menos ou remover todas
